# Di-iP_Di-Fi

./: .env.example  .firebaserc  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ROADMAP_v0.6.md  RUNBOOK.md  Readme.md  audit_2026-02-01.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
backend/functions/: jest.config.js  package-lock.json  package.json  tsconfig.json
brain/: Dockerfile  pyproject.toml  requirements.txt
brain/scripts/: setup_zkp.sh
brain/src/: main.py
brain/src/agents/: invention_agent.py
brain/src/models/: invention.py
brain/src/prompts/: invention_prompts.py
brain/src/services/: llm_service.py  patent_search.py  pubsub_listener.py  zkp_service.py
brain/src/zkp/: novelty.circom
brain/tests/: test_invention_agent.py  test_llm_service.py  test_patent_search.py
contracts/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/contracts/: Crowdsale.sol  DividendVault.sol  Governance.sol  IPNFT.sol  Marketplace.sol  ReputationToken.sol  RoyaltyToken.sol  StoryProtocolAdapter.sol  Timelock.sol
contracts/scripts/: deploy.ts  deploy_amoy.ts
contracts/test/: Crowdsale.test.ts  DividendVault.test.ts  Governance.test.ts  IPNFT.test.ts  Marketplace.test.ts  (+3 more)
docs/: AGENT_SETUP.md  CONTINUED_DEVELOPMENT.md  DEV_LOG_v0.6.md  OPS_CONFIG.md  OPS_HANDOVER.md  SNAPSHOT_2026-02-01.md  SOLANA_MIGRATION.md  WHITEPAPER_2026.md  ai-agent-guide.md  api-reference.md  architecture.md  compliance-abs.md  data-model.md  deployment.md  documentation-overhaul-devtrack.md  event-driven-architecture.md  external-service-setup.md  getting-started.md  security-model.md  smart-contracts.md  vib3-integration.md  vib3-sdk-review.md  zkp-integration.md
infra/: firebase.json
schemas/: InventionSchema.json
scripts/: automate_setup.py  generate_agent_env.py  run_integration_test.sh  test_integration_vault.py  validate_ops.py
vault/: Cargo.toml  Dockerfile
vault/migrations/: 001_initial.sql  002_arizona_abs.sql  003_audit_logs.sql
vault/src/: main.rs
vault/src/crypto/: merkle.rs
vault/src/middleware/: mod.rs
vault/src/models/: dividend.rs  investment.rs  mod.rs
vault/src/routes/: dividends.rs  investments.rs  mod.rs
vault/src/services/: chain_watcher.rs  mod.rs  pubsub.rs  token_calculator.rs  transaction_verifier.rs
(+79 files in other folders)
