[package]
name = "ideacapital-vault"
version = "0.1.0"
edition = "2021"
description = "IdeaCapital Financial Vault - Rust backend for blockchain operations, transaction verification, and dividend distribution"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Blockchain
ethers = { version = "2", features = ["rustls", "ws"] }
alloy = { version = "0.1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }

# Google Cloud (REST API via reqwest)
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# Crypto
sha2 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hmac = "0.12"
hex = "0.4"
merkle-cbt = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
